[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = "A password manager made using python by NaviTheCoderboi with ❤️"
authors = ["NaviTheCoderboi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^40.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
